WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105370
REGRESSION(
r133820
?): SimplifyMarkupTest API test asserts
https://bugs.webkit.org/show_bug.cgi?id=105370
Summary
REGRESSION(r133820?): SimplifyMarkupTest API test asserts
Simon Fraser (smfr)
Reported
2012-12-18 16:54:37 PST
http://build.webkit.org/builders/Apple%20MountainLion%20Debug%20WK1%20%28Tests%29/builds/3959/steps/run-api-tests/logs/stdio
Note: Google Test filter = WebKit1.SimplifyMarkupTest [==========] Running 1 test from 1 test case. [----------] Global test environment set-up. [----------] 1 test from WebKit1 [ RUN ] WebKit1.SimplifyMarkupTest ASSERTION FAILED: m_refChild->parentNode() /Volumes/Data/slave/mountainlion-debug/build/Source/WebCore/editing/InsertNodeBeforeCommand.cpp(45) : WebCore::InsertNodeBeforeCommand::InsertNodeBeforeCommand(PassRefPtr<WebCore::Node>, PassRefPtr<WebCore::Node>, WebCore::ShouldAssumeContentIsAlwaysEditable) 1 0x10dff00d6 WebCore::InsertNodeBeforeCommand::InsertNodeBeforeCommand(WTF::PassRefPtr<WebCore::Node>, WTF::PassRefPtr<WebCore::Node>, WebCore::ShouldAssumeContentIsAlwaysEditable) 2 0x10dfefecb WebCore::InsertNodeBeforeCommand::InsertNodeBeforeCommand(WTF::PassRefPtr<WebCore::Node>, WTF::PassRefPtr<WebCore::Node>, WebCore::ShouldAssumeContentIsAlwaysEditable) 3 0x10d81b6f2 WebCore::InsertNodeBeforeCommand::create(WTF::PassRefPtr<WebCore::Node>, WTF::PassRefPtr<WebCore::Node>, WebCore::ShouldAssumeContentIsAlwaysEditable) 4 0x10d812f91 WebCore::CompositeEditCommand::insertNodeBefore(WTF::PassRefPtr<WebCore::Node>, WTF::PassRefPtr<WebCore::Node>, WebCore::ShouldAssumeContentIsAlwaysEditable) 5 0x10e8a9a2f WebCore::RemoveNodePreservingChildrenCommand::doApply() 6 0x10d8129bf WebCore::CompositeEditCommand::applyCommandToComposite(WTF::PassRefPtr<WebCore::EditCommand>) 7 0x10d813a0d WebCore::CompositeEditCommand::removeNodePreservingChildren(WTF::PassRefPtr<WebCore::Node>, WebCore::ShouldAssumeContentIsAlwaysEditable) 8 0x10ecb224c WebCore::SimplifyMarkupCommand::doApply() 9 0x10d812594 WebCore::CompositeEditCommand::apply() 10 0x10d8123c1 WebCore::applyCommand(WTF::PassRefPtr<WebCore::CompositeEditCommand>) 11 0x10dc2e948 WebCore::Editor::simplifyMarkup(WebCore::Node*, WebCore::Node*) 12 0x10adbb7fb -[WebView(WebViewEditingInMail) _simplifyMarkup:endNode:] 13 0x10a74cf07 TestWebKitAPI::WebKit1_SimplifyMarkupTest_Test::TestBody() 14 0x10a7d893a testing::Test::Run() 15 0x10a7d93ad testing::internal::TestInfoImpl::Run() 16 0x10a7d9f5d testing::TestCase::Run() 17 0x10a7dfec3 testing::internal::UnitTestImpl::RunAllTests() 18 0x10a7dfb19 testing::UnitTest::Run() 19 0x10a766b00 TestWebKitAPI::TestsController::run(int, char**) 20 0x10a708df1 main 21 0x7fff90b8c7e1 start 22 0x2
Attachments
Fixes the bug
(3.18 KB, patch)
2012-12-20 13:26 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Improved the change log entry
(3.60 KB, patch)
2012-12-20 13:32 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(3.18 KB, patch)
2012-12-20 15:49 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2012-12-18 17:16:37 PST
Test disabled in
http://trac.webkit.org/changeset/138089
Ryosuke Niwa
Comment 2
2012-12-19 21:39:50 PST
This is likely a regression from
https://trac.webkit.org/changeset/133820
.
Ryosuke Niwa
Comment 3
2012-12-20 13:26:15 PST
WTH... I swear I uploaded my patch last night :( I must have been half asleep back then. Uploading it now.
Ryosuke Niwa
Comment 4
2012-12-20 13:26:47 PST
Created
attachment 180399
[details]
Fixes the bug
Ryosuke Niwa
Comment 5
2012-12-20 13:32:11 PST
Created
attachment 180400
[details]
Improved the change log entry
Simon Fraser (smfr)
Comment 6
2012-12-20 14:30:17 PST
Comment on
attachment 180400
[details]
Improved the change log entry View in context:
https://bugs.webkit.org/attachment.cgi?id=180400&action=review
> Source/WebCore/editing/SimplifyMarkupCommand.cpp:114 > + if (pastLastNodeToRemove == startNodeIndex + 1) > + return 0;
These return values are so mysterious.
Ryosuke Niwa
Comment 7
2012-12-20 14:32:16 PST
Comment on
attachment 180400
[details]
Improved the change log entry View in context:
https://bugs.webkit.org/attachment.cgi?id=180400&action=review
>> Source/WebCore/editing/SimplifyMarkupCommand.cpp:114 >> + return 0; > > These return values are so mysterious.
Yeah :(
WebKit Review Bot
Comment 8
2012-12-20 14:39:51 PST
Comment on
attachment 180400
[details]
Improved the change log entry Clearing flags on attachment: 180400 Committed
r138303
: <
http://trac.webkit.org/changeset/138303
>
WebKit Review Bot
Comment 9
2012-12-20 14:39:55 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 10
2012-12-20 15:49:39 PST
Reopening to attach new patch.
Ryosuke Niwa
Comment 11
2012-12-20 15:49:41 PST
Created
attachment 180429
[details]
Fixes the bug
Ryosuke Niwa
Comment 12
2012-12-20 15:50:06 PST
Comment on
attachment 180429
[details]
Fixes the bug Wrong patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug