REGRESSION(r133820?): SimplifyMarkupTest API test asserts https://bugs.webkit.org/show_bug.cgi?id=105370

Reviewed by Simon Fraser.

Source/WebCore:

The bug was caused by SimplifyMarkupCommand::doApply calling removeNodePreservingChildren on nodes
that have already been removed. We normally check this condition in pruneSubsequentAncestorsToRemove
but we weren't checking it when there were no ancestor to remove because we early exited in that case.

Fixed the bug by doing the early exit for when the node's parent had already been removed first.

Test: TestWebKitAPI/Tests/mac/SimplifyMarkup.mm

* editing/SimplifyMarkupCommand.cpp:
(WebCore::SimplifyMarkupCommand::doApply):
(WebCore::SimplifyMarkupCommand::pruneSubsequentAncestorsToRemove): Also removed an unused variable
nodeAfterHighestAncestorToRemove.

Tools:

Re-enable the test.

* TestWebKitAPI/Tests/mac/SimplifyMarkup.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/123789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138303 268f45cc-cd09-0410-ab3c-d52691b4dbfc