Source/WebCore/editing/SimplifyMarkupCommand.cpp
@@ -105,15 +105,13 @@ int SimplifyMarkupCommand::pruneSubsequentAncestorsToRemove(Vector<RefPtr<Node> 
         ASSERT(nodesToRemove[pastLastNodeToRemove]->firstChild() == nodesToRemove[pastLastNodeToRemove]->lastChild());
     }
 
-    if (pastLastNodeToRemove == startNodeIndex + 1)
-        return 0;
-
     Node* highestAncestorToRemove = nodesToRemove[pastLastNodeToRemove - 1].get();
-
-    RefPtr<Node> nodeAfterHighestAncestorToRemove = highestAncestorToRemove->nextSibling();
     RefPtr<ContainerNode> parent = highestAncestorToRemove->parentNode();
     if (!parent) // Parent has already been removed.
         return -1;
+    
+    if (pastLastNodeToRemove == startNodeIndex + 1)
+        return 0;
 
     removeNode(nodesToRemove[startNodeIndex], AssumeContentIsAlwaysEditable);
     insertNodeBefore(nodesToRemove[startNodeIndex], highestAncestorToRemove, AssumeContentIsAlwaysEditable);
